kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: exam
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gh1ta/mini-projet:backendv11
          ports:
            - containerPort: 8000
              name: nodejs-port
          livenessProbe:
            httpGet:
              port: nodejs-port
              path: /health
            initialDelaySeconds: 15
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              port: nodejs-port
              path: /ready
            initialDelaySeconds: 15
            timeoutSeconds: 30
          startupProbe:
            httpGet:
              port: nodejs-port
              path: /start
            initialDelaySeconds: 15
            timeoutSeconds: 30

  selector:
    matchLabels:
      app: backend
