kubernetes/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-container
        image: mongo
        ports:
        - name: mongodb-port
          containerPort: 27017
          protocol: TCP
        volumeMounts:
          - mountPath: /data/db
            name: db-storage
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: server-pv-claim
